bootstrap/argocd/NetworkPolicies/baseline-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-egress
  namespace: banking-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-system
          podSelector:
            matchLabels:
              strimzi.io/cluster: main-cluster
      ports:
        - protocol: TCP
          port: 9093
