bootstrap/argocd/NetworkPolicies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: banking-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
