bootstrap/argocd/NetworkPolicies/ibm-cilium-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ibm-external-access
  namespace: banking-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      app: ibm-interface
  egress:
    - toFQDNs:
        - matchName: "pub400.com"
      toPorts:
        - ports:
            - port: "2222"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
