bootstrap/argocd/NetworkPolicies/kafka-allow-keda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-ingress-from-keda
  namespace: infra-system
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: main-cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
      ports:
        - protocol: TCP
          port: 9093
