bootstrap/argocd/NetworkPolicies/keda-allow-kafka-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keda-egress-to-kafka
  namespace: keda
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app: keda-operator

  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-system
          podSelector:
            matchLabels:
              # Διορθώθηκε το label του Strimzi
              strimzi.io/cluster: main-cluster
      ports:
        - protocol: TCP
          port: 9093
