bootstrap/argocd/NetworkPolicies/mailer-service-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mailer-service-egress
  namespace: banking-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app: go-mailer-service
  policyTypes:
    - Egress
  egress:
    # 1. Mailpit (SMTP)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-system
          podSelector:
            matchLabels:
              app: mailpit
      ports:
        # SMTP uses TCP only,
        - protocol: TCP
          port: 1025

    # 2. CoreDNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # 3. Kafka Broker (THE CRITICAL PIECE)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-system
          podSelector:
            matchLabels:
              strimzi.io/cluster: main-cluster
      ports:
        - protocol: TCP
          port: 9093
