bootstrap/argocd/NetworkPolicies/profile-service-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: profile-service-egress
  namespace: banking-apps
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app: profile-service
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra-system
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
